--- a/server_root/index.html
+++ b/server_root/index.html
@@ -2,15 +2,11 @@
 <html>
 
 <head>
-<style>
-    .p {
-        color: chartreuse;
-    }
-</style>
+<title></title>
 </head>
 
 <body>
-    <p class="p" >Hello, World!</p>
+    <p>Hello, World!</p>
 </body>
 
 
