- added linux config and changed encoding to ASCII

--- a/www/index.html
+++ b/www/index.html
@@ -2,11 +2,22 @@
 <html>
 
 <head>
-<title></title>
+<title>Index</title>
+<style>
+
+.header {
+background-color: coral;
+}
+</style>
 </head>
 
 <body>
-    <p>Hello, World!</p>
+	<header class="header" >
+		<p>Header</p>
+	</header>
+	<main>
+		
+	</main>
 </body>
 
 
